부품 검색-입력 기능 추가

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
+# SMART-CMMS Database (Main)
 VITE_SUPABASE_URL=your_supabase_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# Parts Management App Database (External - Read Only)
+VITE_PARTS_SUPABASE_URL=your_parts_supabase_url
+VITE_PARTS_SUPABASE_ANON_KEY=your_parts_supabase_anon_key
+
+# AI
 VITE_GEMINI_API_KEY=your_gemini_api_key
 
 VITE_FIREBASE_API_KEY=your_api_key
