--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.2.6",
     "@supabase/supabase-js": "^2.47.1",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
     "firebase": "^12.6.0",
     "i18next": "^24.2.0",
     "lucide-react": "^0.468.0",
