--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,32 @@
-# SMART-CMMS Database (Main)
+# ============================================
+# SMART-CMMS 환경 변수 설정
+# ============================================
+# 이 파일을 .env.local로 복사하여 실제 값을 입력하세요
+# cp .env.example .env.local
+
+# ============================================
+# Supabase - 메인 데이터베이스
+# ============================================
+# Supabase Dashboard > Settings > API에서 확인
 VITE_SUPABASE_URL=your_supabase_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 
-# Parts Management App Database (External - Read Only)
+# ============================================
+# Supabase - 부품관리 데이터베이스 (외부, 읽기전용)
+# ============================================
 VITE_PARTS_SUPABASE_URL=your_parts_supabase_url
 VITE_PARTS_SUPABASE_ANON_KEY=your_parts_supabase_anon_key
 
-# AI
+# ============================================
+# AI - Google Gemini
+# ============================================
+# Google AI Studio에서 발급: https://aistudio.google.com/
 VITE_GEMINI_API_KEY=your_gemini_api_key
 
-# Firebase Configuration
+# ============================================
+# Firebase - 클라이언트 설정
+# ============================================
+# Firebase Console > 프로젝트 설정 > 일반 > 내 앱 > SDK 설정
 VITE_FIREBASE_API_KEY=your_api_key
 VITE_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=your_project_id
@@ -18,5 +35,31 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
 VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id
 
-# Firebase Cloud Messaging (FCM) - VAPID Key
+# ============================================
+# Firebase Cloud Messaging (FCM) - 웹 푸시
+# ============================================
+# Firebase Console > 프로젝트 설정 > Cloud Messaging > 웹 푸시 인증서
+# "키 쌍 생성" 버튼 클릭하여 VAPID 키 발급
 VITE_FIREBASE_VAPID_KEY=your_vapid_key
+
+# ============================================
+# Supabase MCP Server (Claude Code 연동용)
+# ============================================
+# Supabase Dashboard > Account Settings > Access Tokens에서 발급
+# Claude Code에서 Supabase MCP 서버 사용 시 필요
+SUPABASE_PAT_SMART_CMMS=your_supabase_personal_access_token
+
+# ============================================
+# [서버 전용] Supabase Edge Functions 환경 변수
+# ============================================
+# 아래 변수들은 .env.local이 아닌 Supabase Dashboard에서 설정합니다
+# Supabase Dashboard > Settings > Edge Functions > Secrets
+
+# FCM 서버 키 (서버에서 푸시 전송용)
+# Firebase Console > 프로젝트 설정 > Cloud Messaging > Cloud Messaging API (레거시) 서버 키
+# FCM_SERVER_KEY=your_fcm_server_key
+
+# Supabase Service Role Key (Edge Function에서 DB 접근용)
+# 주의: 이 키는 절대 클라이언트에 노출하면 안 됩니다!
+# Supabase Dashboard > Settings > API > service_role key
+# SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
