--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "exceljs": "^4.4.0",
     "firebase": "^12.6.0",
     "i18next": "^24.2.0",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
